# gnome-shell-3.26.2

./: Makefile.am
data/theme/: gnome-shell-high-contrast.css  gnome-shell.css
js/: js-resources.gresource.xml
js/gdm/: authPrompt.js  loginDialog.js  util.js
js/misc/: extensionUtils.js  smartcardManager.js
js/ui/: appFavorites.js  extensionSystem.js  magnifier.js  panel.js  screenShield.js  shellDBus.js  unlockDialog.js  windowMenu.js
js/ui/status/: system.js
src/: Makefile.am  main.c  shell-global.c
